# son-of-simon

./: .gitignore  CLAUDE.md  PLAN-browser-automation.md  README.md  RELEASE_NOTES.md  apple-mail-calendar-automation.md  pyproject.toml  son.spec  task-loop-analysis.md
.github/workflows/: release.yml
.superset/: config.json
app/: .gitignore  package-lock.json  package.json  vite.config.js
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
docs/: AI_PROVIDERS.md  MINDWTR.md  TAURI_GUI_PLAN.md  THINGS.md
macos-automation/: README.md
macos-automation/browser/: execute-js.sh  physical-click.sh
macos-automation/calendar/: create-event.sh  get-today-events.sh  get-week-events.sh  list-calendars.sh
macos-automation/contacts/: create-contact.sh  get-contact.sh  list-groups.sh  search-contacts.sh
macos-automation/finder/: list-directory.sh
macos-automation/lib/: common.sh
macos-automation/mail/: download-attachments.sh  extract-links.py  get-unread-summary.sh  mark-as-read.sh  search-emails.sh  send-email.sh
macos-automation/messages/: list-chats.sh  search-messages.sh  send-message.sh
macos-automation/notes/: create-note.sh  delete-note.sh  export-note.sh  list-folders.sh  list-notes.sh  move-note.sh  read-note.sh  search-notes.sh
macos-automation/reminders/: complete-reminder.sh  create-reminder.sh  get-due-today.sh  list-reminders.sh
macos-automation/safari/: extract-links.sh  get-current-page.sh  list-tabs.sh  open-url.sh
macos-automation/spotlight/: search.sh
macos-automation/system/: get-system-status.sh  list-bluetooth-devices.sh  set-volume.sh  toggle-bluetooth.sh  (+3 more)
scripts/: build-app.sh  build-sidecar.sh  create-dmg.sh  release.sh
tests/: test_context_trimming.py  test_preferences.py  test_skills.py  test_subagent.py  test_telegram_reconnect.py
(+105 files in other folders)
