[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonofsimon"
version = "0.1.41"
description = "Son of Simon - An LLM-powered agent for macOS automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["llm", "agent", "automation", "scheduler", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "croniter>=2.0.0",
    "filelock>=3.0.0",
    "pyyaml>=6.0.0",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
son = "macbot.cli:main"

[project.urls]
Homepage = "https://github.com/spamsch/son-of-simon"
Repository = "https://github.com/spamsch/son-of-simon"

[tool.hatch.build.targets.wheel]
packages = ["src/macbot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
